rest landing/single

--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -2,6 +2,9 @@
  * Font Stacks
  ***************************/
 $knockout : 'Knockout', Arial Narrow, Arial, sans-serif;
+$knockout-bantam : 'Knockout-HTF47-Bantamweight', Arial Narrow, Arial, sans-serif;
+$knockout-welter : 'Knockout-HTF50-Welterweight', Arial Narrow, Arial, sans-serif;
+$knockout-lite : 'Knockout-HTF49-Liteweight', Arial Narrow, Arial, sans-serif;
 $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
 
 /*
