--- a/assets/css/_header.scss
+++ b/assets/css/_header.scss
@@ -1,4 +1,5 @@
 $header_height_desktop : 106px;
+$header_height_mobile : 58px;
 
 #masthead {
   //position: fixed;
@@ -13,6 +14,11 @@ $header_height_desktop : 106px;
   padding: 0 30px;
   background: white;
   border-bottom: 2px solid $toro_red;
+  @media screen and (max-width: $mobile_max) {
+    height: $header_height_mobile;
+    padding-left: $gutter_width_mobile;
+    padding-right: 0;
+  }
 }
 
 #masthead-logo {
@@ -26,55 +32,184 @@ $header_height_desktop : 106px;
     height: auto;
     max-width: 212px;
     max-height: 45px;
+  } @media screen and (max-width: $mobile_max) {
+    height: 26px;
+    img, svg {
+      max-height: 26px;
+      max-width: 126px;
+    }
   }
 }
 
 #site-navigation {
   flex: 1 0 0;
   > ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    color: $toro_red;
-    text-align: center;
-    > li {
-      padding: 0 16px;
-      margin: 0 -16px;
-      a {
-        @include nav-font-style;
-        color: inherit;
-        text-decoration: none;
-        padding: 12px 16px;
-        display: block;
-      } &.has-children {
-        position: relative;
-        ul {
-          display: none;
-        } &:hover {
-          background: $toro_red;
-          color: $white;
+    @media screen and (min-width: $desktop_min) {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      color: $toro_red;
+      text-align: center;
+      > li {
+        padding: 0 16px;
+        margin: 0 -16px;
+        a {
+          @include nav-font-style;
+          color: inherit;
+          text-decoration: none;
+          padding: 12px 16px;
+          display: block;
+        } &.has-children {
+          position: relative;
           ul {
-            display: block;
-            position: absolute;
-            left: 0;
-            top: 100%;
-            width: 100%;
-            height: auto;
+            display: none;
+          } &:hover, a:focus {
             background: $toro_red;
             color: $white;
-            li {
-              padding: 0 16px;
-              a {
-                border-top: 2px solid $oro_yellow;
+            ul, + ul {
+              display: block;
+              position: absolute;
+              left: 0;
+              top: 100%;
+              width: 100%;
+              height: auto;
+              background: $toro_red;
+              color: $white;
+              li {
+                padding: 0 16px;
+                a {
+                  border-top: 2px solid $oro_yellow;
+                } &.dupe {
+                  display: none;
+                  @media screen and (max-width: $mobile_max) {
+                    display: block;
+                  }
+                }
               }
             }
           }
         }
       }
+    } @media screen and (max-width: $mobile_max) {
+      display: none ;
+    }
+  } > .mobile-nav-header {
+    display: none;
+  } @media screen and (max-width: $mobile_max) {
+    flex: 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+     &.opened {
+      position: fixed;
+      z-index: 10;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: $toro_red;
+      > ul {
+        display: block;
+        width: 100%;
+        max-width: 224px;
+        > li {
+          color: $white;
+          text-align: center;
+          @include nav-font-style;
+          padding: 16px 0;
+          border-bottom: 3px solid $oro_yellow;
+          a {
+            color: $white;
+            text-decoration: none;
+            &:hover {
+              color: $oro_yellow;
+            }
+          } &.has-children {
+            > a {
+              position: relative;
+              &::before {
+                @include psuedo;
+                right: -24px;
+                top: calc(50% - 8px);
+                width: 8px;
+                height: 8px;
+                border-bottom: 2px solid white;
+                border-right: 2px solid white;
+
+                // background: url('../img/carousel-arrow-white.svg');
+                // background-size: contain;
+                // background-repeat: no-repeat;
+                // background-position: center center;
+                @include transform(rotate(45deg));
+                transition: ease 300ms all;
+              }
+            } ul {
+              display: none;
+            } &.expanded {
+              > a {
+                color: $oro_yellow;
+              } ul {
+                margin-top: 2px;
+              }
+            }
+          }
+        }
+      } > .mobile-nav-header {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        padding: 0 $gutter_width_mobile;
+        margin-top: 24px;
+        a {
+          display: block;
+          color: $white;
+          text-decoration: none;
+          &:hover {
+            color: $oro_yellow;
+          }
+        } .mobile-nav-header-logo {
+          svg {
+            width: 40px;
+            height: 40px;
+          }
+        } .mobile-nav-header-close {
+          font-size: 5.6rem;
+          width: 22px;
+          height: 40px;
+          margin-right: 12px;
+        }
+      }
     }
   }
 }
+
+#skip-to-navigation-link {
+  display: none;
+  @media screen and (max-width: $mobile_max) {
+    display: block;
+    height: 58px;
+    width: 58px;
+    background: $toro_red;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+  }
+}
+
+
 
 #content {
   //margin-top: $header_height_desktop;
