--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -87,3 +87,11 @@ svg {
 .content-margins {
   @include content-margins;
 }
+.more-info{
+  border: 2px solid white;
+  text-transform: uppercase;
+  padding: 15px 60px;
+  font-size: 20px;
+  color: white;
+  display: inline-block;
+}
