--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -6,7 +6,7 @@
     $col_no_desktop : 12;
     $gutter_width_desktop : 20px;
     $col_width_desktop : ( $content_width_desktop - ( ( $col_no_desktop - 1 ) * $gutter_width_desktop ) ) / $col_no_desktop;
-    
+
   /* Mobile */
     $content_width_mobile : 100%;
     $gutter_width_mobile : 32px;
@@ -32,7 +32,7 @@
     }
     @return (( $col_width_desktop * $col ) + ( $gutter_width_desktop * ( ( $col - 1 ) + $extra_gutters ) ));
   } @else {
-    
+
   }
 }
 
@@ -47,7 +47,7 @@
 /*
  * Mixins / Interfaces
  ***************************/
-%psuedo {
+@mixin psuedo {
   content: '';
   display: block;
   position: absolute;
