--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,6 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 @import "footer";
 @import "restaurant-single";
 @import "restaurant-landing";
+@import "full-width-header";
+@import "home";
+@import "the_mercado";
