--- a/templates/restaurant_landing.html
+++ b/templates/restaurant_landing.html
@@ -5,7 +5,7 @@
 <section class="restaurant-landing">
   <div class="content-margins">
 
-    <div class="restaurant-landing-header">
+    <div class="page-landing-header">
       <img src="{{static('img/restaurant-landing/Left.png')}}" alt="">
       <h1>Our Restaurants</h1>
       <img src="{{static('img/restaurant-landing/Right.png')}}" alt="">
