--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -7,6 +7,15 @@
   align-items: center;
   padding: 10px 0;
 
+  img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+
+  }
   &:before{
     height: 100%;
     width: 100%;
@@ -14,18 +23,21 @@
     position: absolute;
     left: 0;
     top:0;
-
     z-index: -1;
-    border-style: solid;
-    border-width: 30px 30px 0 0;
-    border-color: $oro_yellow transparent transparent transparent;
+    // border-style: solid;
+    // border-width: 30px 30px 0 0;
+    // border-color: $oro_yellow transparent transparent transparent;
+    // background-image: url('../img/yellow_triangle.png');
+    // background-size: cover;
+    // background-repeat: no-repeat;
+    // background-position: center;
   }
   h2{
     text-transform: uppercase;
     font-weight: initial;
     font-family: $knockout-bantam;
     color: $toro_red;
-    font-size: 70px;
+    font-size: 90px;
 
   }
 }
