--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,8 @@
 <!-- START footer.html  -->
 
 <!-- .container close -->
+</div>
+
 <footer id="newsletter-capture" class="site-footer">
   <div class="content-margins">
     <h2 class="newsletter-capture-title">
@@ -46,7 +48,7 @@
         <a href="mailto:hola@littlespain.com">hola@littlespain.com</a>
         <br>
         222.222.2222
-      </address><!-- .site-info --> 
+      </address><!-- .site-info -->
       <nav id="footer-navigation" class="menu">
       <ul class="footer-menu">
         {% for item in navs.footer %}
