--- a/templates/the_mercado.html
+++ b/templates/the_mercado.html
@@ -17,14 +17,19 @@
 <section class="mercado-kiosks">
   <div class="content-margins">
     <div class="section-title-container">
+      <img src="{{ static('img/yellow_triangle.png')}}" alt="">
       <h2>Kiosks</h2>
     </div>
 
     <div class="kiosk-grid">
-        {% for kiosk in boxes.kiosks %}
+        {% for kiosk in boxes.kiosks.all %}
         <article class="kiosk-box">
-          <a href="">
-            {{kiosk.name}}
+          <a href="{{kiosk.url}}">
+            <div class="kiosk-box-img">
+              <img src="{{kiosk.fields.thumbnail_left.url}}" alt="">
+              <h4>{{kiosk.fields.hover_text}}</h4>
+            </div>
+            <h6>{{kiosk.name}}</h6>
           </a>
         </article>
         {% endfor %}
@@ -32,5 +37,45 @@
 
   </div>
 </section>
+
+<section class="mercado-bars">
+  <div class="content-margins">
+    <div class="section-title-container">
+      <img src="{{ static('img/yellow_triangle.png')}}" alt="">
+      <h2>Bars</h2>
+    </div>
+
+    <div class="bars-grid">
+        {% for bar in boxes.bar.all %}
+        <article class="kiosk-box">
+          <a href="{{bar.url}}">
+            <div class="kiosk-box-img">
+              <img src="{{bar.fields.thumbnail_left.url}}" alt="">
+              <h4>{{bar.fields.hover_text}}</h4>
+            </div>
+            <h6>{{bar.name}}</h6>
+          </a>
+        </article>
+        {% endfor %}
+    </div>
+
+  </div>
+</section>
+
+
+<section class="ig-feed">
+  <div class="content-margins">
+    <div class="ig-boxes">
+      <div class="ig-box edge-box">
+        <h5>¿Que hacen en el Mercado?</h5>
+      </div>
+
+      <div class="ig-box edge-box">
+        <h5><a href="">Little Spain on Instagram</a></h5>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 {% include "footer.html" %}
